--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ body{
     color: var(--white);
     background-color: var(--light-grey);
 }
-.card > button {
+.card > a {
+    display: block;
     width: 100%;
     padding: 13px;
     font-size: 15px;
@@ -93,13 +94,16 @@ body{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: var(--white);
+    text-align: center;
+    text-decoration: none;
+
     transition: all ease-in-out 0.3s;
 
     background-color: var(--orange);
     border: none;
     border-radius: 22px;
 }
-.card > button:hover {
+.card > a:hover {
     color: var(--orange);
     background-color: var(--white);
     cursor: pointer;
