--- a/pages/agradecimento.css
+++ b/pages/agradecimento.css
@@ -28,15 +28,29 @@ body{
 .card {
     background: var(--black-gradient);
     max-width: 412px;
-    padding: 32px;
+    padding: 45px 32px;
     border-radius: 30px;
+    text-align: center;
+}
+.card img{
+    margin-bottom: 32px;
+}
+
+.card .paragrafo_nota {
+    padding: 4px 18px;
+    background-color: var(--dark-blue);
+    width: fit-content;
+    margin-inline: auto;
+    border-radius: 22px;
+    font-size: 15px;
+    color: var(--orange);
+    margin-bottom: 32px;
 }
 
 .card p {
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
-    margin-bottom: 24px;
 
 }
 .card h1 {
